--- a/tarjeta_de_producto.css
+++ b/tarjeta_de_producto.css
@@ -23,7 +23,7 @@ h1{
     width: 300px;
     background-image: linear-gradient(25deg, #2f55a6, #457da5, #4ca6a2, #46d19d);
     border-radius: 50px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, alpha)0.1;
+    box-shadow: 0 4px 8px rgba(0, 0, 0,0.1);
     display: inline-block;
     margin: 20px;
     text-align: center;
